--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "This is an admin service to manage problems of AlgoHub",
   "main": "index.js",
   "scripts": {
+    "dev" : "npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  }
 }
