--- a/AlgoHubBackend/AlgoHub-Problem-Service/package.json
+++ b/AlgoHubBackend/AlgoHub-Problem-Service/package.json
@@ -4,7 +4,7 @@
   "description": "This is an admin service to manage problems of AlgoHub",
   "main": "index.js",
   "scripts": {
-    "dev" : "npx nodemon src/index.js",
+    "dev": "npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.10"
   }
 }
