--- a/AlgoHubBackend/AlgoHub-Problem-Service/package.json
+++ b/AlgoHubBackend/AlgoHub-Problem-Service/package.json
@@ -13,7 +13,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "marked": "^17.0.0",
     "mongoose": "^8.19.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sanitize-html": "^2.17.0",
+    "turndown": "^7.2.2"
   }
 }
