--- a/AlgoHubBackend/AlgoHub-Problem-Service/package.json
+++ b/AlgoHubBackend/AlgoHub-Problem-Service/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.19.3",
     "nodemon": "^3.1.10",
     "sanitize-html": "^2.17.0",
-    "turndown": "^7.2.2"
+    "turndown": "^7.2.2",
+    "winston": "^3.18.3"
   }
 }
