--- a/AlgoHubBackend/AlgoHub-Problem-Service/package.json
+++ b/AlgoHubBackend/AlgoHub-Problem-Service/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.10",
     "sanitize-html": "^2.17.0",
     "turndown": "^7.2.2",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
