--- a/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
@@ -12,8 +12,7 @@
     "dev": "concurrently \"npm run watch\" \"nodemon ./dist/index.js\"",
     "lint": "eslint \"src/**/*.{ts,js}\"",
     "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
-    "format": "prettier --write \"src/**/*.{ts,js,json,md}\"",
-    "prepare": "husky"
+    "format": "prettier --write \"src/**/*.{ts,js,json,md}\""
   },
   "keywords": [],
   "author": "",
@@ -26,7 +25,6 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^9.1.7",
     "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3"
