--- a/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
@@ -30,8 +30,11 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/ioredis": "^4.28.10",
+    "bullmq": "^5.64.1",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ioredis": "^5.8.2"
   }
 }
