--- a/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc -w",
-    "build": "tsc",
-    "prebuild": "npm run lint:fix",
-    "prestart": "npm run build",
-    "start": "nodemon ./dist/index.js",
-    "dev": "concurrently \"npm run watch\" \"nodemon ./dist/index.js\"",
-    "lint": "eslint \"src/**/*.{ts,js}\"",
-    "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
-    "format": "prettier --write \"src/**/*.{ts,js,json,md}\""
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "build": "tsc",
+  "prebuild": "npm run lint:fix",
+  "prestart": "npm run build",
+  "start": "node ./dist/index.js",
+  "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+  "lint": "eslint \"src/**/*.{ts,js}\"",
+  "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
+  "format": "prettier --write \"src/**/*.{ts,js,json,md}\""
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -30,6 +30,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@bull-board/api": "^6.14.2",
+    "@bull-board/express": "^6.14.2",
     "@types/ioredis": "^4.28.10",
     "bullmq": "^5.64.1",
     "concurrently": "^9.2.1",
