--- a/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Evaluation-service/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "build": "tsc",
-  "prebuild": "npm run lint:fix",
-  "prestart": "npm run build",
-  "start": "node ./dist/index.js",
-  "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-  "lint": "eslint \"src/**/*.{ts,js}\"",
-  "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
-  "format": "prettier --write \"src/**/*.{ts,js,json,md}\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prebuild": "npm run lint:fix",
+    "prestart": "npm run build",
+    "start": "node ./dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "lint": "eslint \"src/**/*.{ts,js}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,js,json,md}\""
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -38,7 +37,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
+    "ts-node-dev": "^2.0.0",
     "winston": "^3.18.3",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zod": "^4.1.13"
   }
 }
