--- a/AlgoHubFrontend/package.json
+++ b/AlgoHubFrontend/package.json
@@ -10,21 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ace-builds": "^1.43.5",
     "daisyui": "^5.5.14",
+    "dompurify": "^3.3.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-ace": "^14.0.1",
+    "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/ace": "^0.0.52",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.5.0",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
