--- a/AlgoHubFrontend/tsconfig.app.json
+++ b/AlgoHubFrontend/tsconfig.app.json
@@ -11,6 +11,7 @@
     /* Bundler mode */
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
     "noEmit": true,
