--- a/AlgoHubFrontend/package.json
+++ b/AlgoHubFrontend/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/ace": "^0.0.52",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^24.10.1",
