--- a/AlgoHubFrontend/package.json
+++ b/AlgoHubFrontend/package.json
@@ -17,6 +17,7 @@
     "react-ace": "^14.0.1",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.11.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1"
   },
