--- a/AlgoHubBackend/AlgoHub-Enqueuer-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Enqueuer-service/package.json
@@ -22,10 +22,13 @@
     "@fastify/sensible": "^6.0.4",
     "@fastify/swagger": "^9.6.1",
     "@fastify/type-provider-typebox": "^6.1.0",
+    "bullmq": "^5.67.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-cli": "^7.4.1",
-    "fastify-plugin": "^5.1.0"
+    "fastify-plugin": "^5.1.0",
+    "ioredis": "^5.9.2",
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.2",
