--- a/AlgoHubBackend/AlgoHub-Enqueuer-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Enqueuer-service/package.json
@@ -27,8 +27,11 @@
     "fastify": "^5.6.2",
     "fastify-cli": "^7.4.1",
     "fastify-plugin": "^5.1.0",
+    "fastify-type-provider-zod": "^6.1.0",
+    "http-status-codes": "^2.3.0",
     "ioredis": "^5.9.2",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^24.10.2",
