--- a/AlgoHubBackend/AlgoHub-Enqueuer-service/package.json
+++ b/AlgoHubBackend/AlgoHub-Enqueuer-service/package.json
@@ -22,6 +22,7 @@
     "@fastify/sensible": "^6.0.4",
     "@fastify/swagger": "^9.6.1",
     "@fastify/type-provider-typebox": "^6.1.0",
+    "axios": "^1.13.5",
     "bullmq": "^5.67.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
