feat: added real time updates to frontend using socket.io

--- a/AlgoHubBackend/AlgoHub-WebSocket-Service/package.json
+++ b/AlgoHubBackend/AlgoHub-WebSocket-Service/package.json
@@ -1,17 +1,20 @@
 {
   "name": "algohub-websocket-service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "ioredis": "^5.9.2",
+    "nodemon": "^3.1.11",
     "redis": "^5.10.0",
     "socket.io": "^4.8.3"
   }
