--- a/AlgoHubBackend/AlgoHub-Problem-Service/package.json
+++ b/AlgoHubBackend/AlgoHub-Problem-Service/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
